Changed docblock-python-view CSS classes

--- a/styles/docblock-python.less
+++ b/styles/docblock-python.less
@@ -7,7 +7,9 @@
 .docblock-python {
 }
 
-.docblock-python-current-style {
-  font-weight: bold;
-  color: @text-color-highlight
+.docblock-python-view {
+  .current-style > div {
+    font-weight: bold;
+    color: @text-color-highlight
+  }
 }
